Adição de novo parágrafo.

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,8 +10,13 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-        Beatae earum saepe eveniet ullam. Minima suscipit sint officiis, 
-        delectus non enim amet sunt blanditiis ratione dolores aliquid 
-        dolorum similique ab adipisci.</p>
+    Beatae earum saepe eveniet ullam. Minima suscipit sint officiis, 
+    delectus non enim amet sunt blanditiis ratione dolores aliquid 
+    dolorum similique ab adipisci.</p>
+    <hr>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+    Impedit corporis aut dolore tempore inventore atque delectus 
+    odio velit laborum autem alias sed at, eum dolor amet, aliquam 
+    necessitatibus harum expedita.</p>
 </body>
 </html>
